--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-feather": "^2.0.10",
-        "sass": "^1.57.1",
-        "typescript": "4.9.4"
+        "sass": "^1.57.1"
     },
     "devDependencies": {
-        "prettier": "2.8.2"
+        "prettier": "2.8.2",
+        "typescript": "4.9.4"
     }
 }
