--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
         "@types/react-dom": "18.0.10",
         "eslint": "8.31.0",
         "eslint-config-next": "13.1.1",
+        "framer-motion": "^8.5.5",
         "next": "13.1.1",
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-feather": "^2.0.10",
+        "react-intersection-observer": "^9.4.1",
         "sass": "^1.57.1"
     },
     "devDependencies": {
